# Lockcell

./: Makefile  README.md  VerrouConf.py  main.py  parse.sh  pyproject.toml
.github/workflows/: ci.yaml
Tasks/: Task.py
data/integral/: DD_CMP.py  DD_RUN  test  unitTest
exemples/Benchmarks/: README.md  config.py  launcher.py  main.py  print_graphs.py  pyproject.toml  remove_list.py
exemples/Benchmarks/data/: lockcell_bench.pkl  todo_verrou.pkl  verrou_bench.pkl
exemples/TestVerrou/: main.py  pyproject.toml  tools.py
lockcell/: README.md  pyproject.toml  pytest.ini  ruff.toml
lockcell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lockcell/exemples/: config.yaml  simple_run.py  tools.py
lockcell/src/lockcell/: VerrouConf.py  __init__.py  constants.py  controllers.py  core.py  events.py  graph.py  graphViz.py  main.py  status.py  utils.py
lockcell/src/lockcell/Tasks/: Results.py  Task.py  TaskEnv.py  TaskMaster.py  __init__.py  utils.py
lockcell/src/lockcell/config/: BaseConfig.py  TestConfig.py
lockcell/src/lockcell/delta_algorithms/: __init__.py  algo_base.py  ddmin.py  rddmin.py
lockcell/src/lockcell/scripts/: parse.sh
lockcell/tests/: test_e2e.py  tools.py
