[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lockcell"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "armonik>=3.26.1",
    "graphviz>=0.21",
    "numpy>=2.2.6",
    "pymonik==0.2.5",
]

[tool.hatch.build.targets.wheel]
where = ["src/lockcell"]

[tool.uv.workspace]
members = [
    "lockcell",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
