[project]
name = "testverrou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lockcell",
    "pymonik>=0.2.3",
]

[dependency-groups]
dev = [
    "lockcell",
]

[tool.uv.sources]
lockcell = { path = "../../lockcell" }
